--- a/index.html
+++ b/index.html
@@ -153,11 +153,8 @@
       </style>
       <div class="app-loading">
         <div class="app-loading-wrap">
-          <img src="/resource/img/logo.png" class="app-loading-logo" alt="Logo" />
-          <div class="app-loading-dots">
-            <span class="dot dot-spin"><i></i><i></i><i></i><i></i></span>
-          </div>
-          <div class="app-loading-title"><%= title %></div>
+          <img src="/resource/img/loading.gif" alt="Logo" />
+          <div class="app-loading-title">拼命加载中</div>
         </div>
       </div>
     </div>
